language/move-lang/tests/move_check/borrows/borrow_local_combo_invalid.exp
error[E07001]: referential transparency violated
   ┌─ tests/move_check/borrows/borrow_local_combo_invalid.move:13:17
   │
12 │         if (cond) f = &mut s.f else f = &mut other.f;
   │                       -------- It is still being mutably borrowed by this reference
13 │         let x = &s;
   │                 ^^ Invalid borrow of local 's'

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/borrow_local_combo_invalid.move:23:9
   │
20 │         if (cond) f = &mut s.f else f = &mut other.f;
   │                       -------- Field 'f' is still being mutably borrowed by this reference
   ·
23 │         *x;
   │         ^^ Invalid dereference.

error[E07001]: referential transparency violated
   ┌─ tests/move_check/borrows/borrow_local_combo_invalid.move:30:17
   │
29 │         if (cond) f = &mut s.f else f = &mut s.g;
   │                                         -------- It is still being mutably borrowed by this reference
30 │         let x = &s;
   │                 ^^ Invalid borrow of local 's'

error[E07001]: referential transparency violated
   ┌─ tests/move_check/borrows/borrow_local_combo_invalid.move:38:17
   │
37 │         if (cond) x = &mut s else x = other;
   │                       ------ It is still being mutably borrowed by this reference
38 │         let y = &s;
   │                 ^^ Invalid borrow of local 's'

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/borrow_local_combo_invalid.move:48:9
   │
46 │         if (cond) x = &mut s else x = other;
   │                       ------ It is still being mutably borrowed by this reference
47 │         let y = &mut s;
48 │         *y;
   │         ^^ Invalid dereference.

